2006-02-20  Derek Scherger  <derek@echologic.com>

	* restrictions.{cc,hh}: attempt to simplify and remove duplication
	
2006-02-20  Derek Scherger  <derek@echologic.com>

	* commands.cc (status, ls_known, find_unknown_and_ignored,
	find_missing, commit, diff, revert, log): add excludes to restrictions
	* restrictions.{cc,hh}: preliminary support for excludes and unit
	tests to see if it works

2006-02-13  Derek Scherger  <derek@echologic.com>

	* app_state.{cc,hh}: 
	* globis.{cc,hh}: make exclude_patterns a vector rather than a
	set so that restriction includes/excludes are of the same type

2006-02-21  Nathaniel Smith  <njs@pobox.com>

	* work.cc (detach_node): This time for sure!

2006-02-21  Nathaniel Smith  <njs@pobox.com>

	* work.cc (detach_node): Oops, x != y != !(x == y).

2006-02-21  Nathaniel Smith  <njs@pobox.com>

	* work.cc (detach_node): Check if we are passed the root dir, and
	error out if so.

2006-02-21  Matt Johnston  <matt@ucc.asn.au>

	* commands.cc (pid_file): newline-terminate the pid

2006-02-21  Richard Levitte  <richard@levitte.org>

	* contrib/usher.cc (server::set_hosts): Erasing the list node that
	we're iterating on, then trying to go to the next node doesn't
	work.  Save the iterator, then increment it before erasing the
	node using the saved value.  No more segfaults.

2006-02-21  Matthew Gregan  <kinetik@orcon.net.nz>

	* sanity.hh: Work around roster_merge.cc compilation failure with
	GCC 3.4.

2006-02-20  Richard Levitte  <richard@levitte.org>

	* monotone.cc (cpp_main), options.hh, ui.cc (redirect_log_to),
	ui.hh (struct user_interface): Add --log option, to redirect the
	log lines to a file.

	* monotone.texi (OPTIONS): Document it.

	* po/sv.po: Translate help for this option to Swedish.

	* testsuite.at, tests/t_log_to_file.at: Test it.

2006-02-20  Matt Johnston  <matt@ucc.asn.au>

	* database.cc (remove_version): get rid of dangling deltas,
	don't try to put data or deltas if they already exist.